Added favicon and changed the title

--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -16,7 +16,7 @@ body {
     @include font-semi-bold-normal;
     -webkit-font-smoothing: antialiased;
     
-    .App {
+    .page-container {
         max-width: 450px;
         margin: auto;
         background: $background-grey;
